[refactor] Collectors.toList() -> Stream.toList() 변경